# kvarn

./: '  .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_macOS.sh  extensions.html  extensions.md  roadmap.md  routing.md  sample.service  tmp.php  workspace.code-workspace
.cargo/: config
.github/: dependabot.yml
.github/workflows/: chute.yml  extensions.yml  kvarnctl.yml  main.yml
arktis_extensions/: Cargo.toml
arktis_extensions/src/: lib.rs
async/: Cargo.toml  README.md
async/src/: lib.rs  prelude.rs
chute/: Cargo.toml  README.md
chute/src/: highlight.rs  lib.rs  main.rs
core/: Cargo.toml
core/src/: host.rs  lib.rs  limiting.rs  prelude.rs  utils.rs
ctl/: Cargo.toml  README.md
ctl/src/: main.rs
examples/extensions/: main.rs
extensions/: Cargo.toml  README.md
extensions/src/: certificate.rs  connection.rs  fastcgi.rs  lib.rs  php.rs  push.rs  reverse-proxy.rs  templates.rs  url-rewrite.rs  url_rewrite.rs  view-counter.rs
extensions/templates/: 1.txt  2.txt  3.txt
extensions/tests/: reverse-proxy.rs  templates.rs
kvarn_chute/: Cargo.toml  README.md
kvarn_chute/src/: lib.rs  main.rs
kvarn_extensions/: Cargo.toml  README.md
kvarn_extensions/src/: lib.rs  php.rs  push.rs  reverse-proxy.rs  templates.rs
kvarn_extensions/templates/: 1.txt  2.txt  3.txt
kvarn_extensions/tests/: reverse-proxy.rs  templates.rs
public/: index.html  index2.html  nav.css  script.js  style.css  template-test.html  test.html  theme.css
public/arktis/: index.html
signal/: Cargo.toml  README.md
signal/src/: lib.rs
src/: application.rs  bindings.rs  cache.rs  cache_old.rs  comprash.rs  compression.rs  connection.rs  cors.rs  cryptography.rs  csp.rs  ctl.rs  encryption.rs  error.rs  extension_helper.rs  extensions.rs  host.rs  lib.rs  limiting.rs  main.rs  parse.rs  prelude.rs  read.rs  shutdown.rs  test.rs  threading.rs  transport.rs  uring_udp.rs  utility.rs  vary.rs  websocket.rs
templates/: script  standard  style
testing/: Cargo.toml  README.md
testing/src/: lib.rs
tests/: byte-ranges.rs  cors.rs  extensions.rs  nonce.rs  shutdown.rs
url-crawl/: Cargo.toml
url-crawl/examples/: icelk.dev.rs
url-crawl/src/: lib.rs
url_crawl/: Cargo.toml  README.md
url_crawl/examples/: icelk.dev.rs
url_crawl/src/: lib.rs
utils/: Cargo.toml  README.md
utils/src/: extensions.rs  lib.rs  parse.rs  prelude.rs
