[package]
name = "arktis_extensions"
version = "0.1.0"
authors = ["Icelk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arktis = { path = "../" }
fastcgi-client = { version = "0.5.0", default-features = false, optional = true }

[features]
default = ["php"]
php = ["fastcgi-client"]
