[package]
name = "kvarn_async"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1"
http = "^0.2"
kvarn_utils = { path = "../utils" }
tokio = { version = "^1.13", features = ["rt", "io-util", "net", "fs", "sync", "parking_lot", "time"] }
