[package]
name = "kvarn_async"
version = "0.5.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "Async utilities used in the Kvarn web server."
readme = "README.md"
homepage = "https://kvarn.org/"
repository = "https://github.com/Icelk/kvarn/"
license = "Apache-2.0"
keywords = ["web-server", "utilities"]
categories = ["web-programming", "asynchronous"]

[dependencies]
bytes = "1"
http = "0.2"
kvarn_utils = { path = "../utils", version = "0.5" }
tokio = { version = "1.20", features = ["rt", "io-util", "fs", "sync", "parking_lot", "time"] }
