[package]
name = "kvarn-chute"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "A Markdown converter designed to use the Kvarn templating engine."
readme = "README.md"
homepage = "https://kvarn.org/chute/"
repository = "https://github.com/Icelk/kvarn/"
license = "MIT OR Apache-2.0"
keywords = ["markdown", "kvarn-extension", "kvarn", "templates"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "chute"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
colored = "2.0"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
notify = "4"
unicode_categories = "0.1"
time = { version = "0.3", optional = true, features = ["formatting", "macros", "local-offset"] }
kvarn_utils = "0.3.1"

# Bin deps
clap = { version = "3", optional = true, features = ["cargo"] }
env_logger = { version = "0.9", optional = true }

[features]
default = ["date", "bin"]
date = ["time"]

bin = ["env_logger", "clap"]
