[package]
name = "kvarn-chute"
version = "0.4.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "A Markdown converter designed to use the Kvarn templating engine."
readme = "README.md"
homepage = "https://kvarn.org/chute/"
repository = "https://github.com/Icelk/kvarn/"
license = "MIT OR Apache-2.0"
keywords = ["markdown", "kvarn-extension", "kvarn", "templates"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "chute"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
colored = "3.0"
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd", "html"] }
notify = "7"
unicode_categories = "0.1"
time = { version = "0.3", optional = true, features = ["formatting", "macros", "local-offset"] }
time-tz = { version = "2", optional = true, features = ["system"] }
kvarn_utils = "0.6"

# Bin deps
clap = { version = "4", optional = true, features = ["cargo"] }
clap_autocomplete = { version = ">= 0.4.1", optional = true }
env_logger = { version = "0.11", optional = true, default-features = false, features = ["auto-color", "humantime"] }
log = { version = "0.4.17", optional = true }
notify-debouncer-full = { version = "0.4", default-features = false }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
lazy_static = "1.4.0"

[features]
default = ["date", "bin", "completion"]
date = ["time", "time-tz"]

bin = ["env_logger", "log", "clap"]
completion = ["clap_autocomplete"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
