[package]
name = "kvarn_core"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
https = ["rustls"]

[dependencies]
bytes = "^1"
http = "^0.2"
log = "^0.4"
rustls = { version = "^0.19", optional = true }
# webpki = { version = "^0.21", optional = true }
