[package]
name = "kvarnctl"
version = "0.1.1"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "Communication with Kvarn from the command line."
readme = "README.md"
homepage = "https://kvarn.org/ctl/"
repository = "https://github.com/Icelk/kvarn/"
license = "Apache-2.0"
keywords = ["ipc", "kvarn"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["cargo"] }
clap_autocomplete = "0.4"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
kvarn_signal = { path = "../signal", version = "0.1" }
kvarn_utils = { path = "../utils", version = "0.5" }
log = "0.4"
tokio = { version = "1.20", features = ["rt", "io-util", "macros", "time"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }
