[package]
name = "kvarnctl"
version = "0.1.1"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "Communication with Kvarn from the command line."
readme = "README.md"
homepage = "https://kvarn.org/ctl/"
repository = "https://github.com/Icelk/kvarn/"
license = "Apache-2.0"
keywords = ["ipc", "kvarn"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["cargo"] }
clap_autocomplete = { version = ">= 0.4.1", optional = true }
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
kvarn_signal = { path = "../signal", version = "0.1" }
kvarn_utils = { path = "../utils", version = "0.5" }
log = "0.4"
tokio = { version = "1, >=1.23.1", features = ["rt", "io-util", "macros", "time"] }

[features]
default = ["completion"]
completion = ["clap_autocomplete"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }
