[package]
name = "kvarn-extensions"
version = "0.5.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
description = "Extensions for the Kvarn web server. Features HTTP/2 automatic push and a templating engine."
repository = "https://github.com/Icelk/kvarn/tree/main/kvarn_extensions/"
license = "Apache-2.0"
keywords = ["http-push", "template", "php"]
categories = ["template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
kvarn = { path = "../", default-features = false, version = "0.5" }
kvarn-fastcgi-client = { version = "0.1", optional = true }
tokio = { version = "1, >=1.23.1", features = ["fs"] }
url-crawl = { version = "0.1", optional = true }
async_chunked_transfer = "1.4"
percent-encoding = { version = "2", optional = true }
memchr = "2"

[features]
default = ["php", "templates", "push"]
connection = ["tokio/net", "tokio/io-util"]
php = ["kvarn-fastcgi-client", "connection", "percent-encoding"]
templates = []
push = ["url-crawl"]
reverse-proxy = ["connection"]

[dev-dependencies]
tokio = { version = "1, >=1.23.1", features = ["net", "io-util", "macros"] }
kvarn_testing = { path = "../testing", version = "0.5" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
