[package]
name = "kvarn-extensions"
version = "0.5.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
description = "Extensions for the Kvarn web server. Features HTTP/2 automatic push and a templating engine."
repository = "https://github.com/Icelk/kvarn/tree/main/kvarn_extensions/"
license = "Apache-2.0"
keywords = ["http-push", "template", "php"]
categories = ["template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
kvarn = { path = "../", default-features = false, version = "0.5" }
kvarn-fastcgi-client = { version = "0.1", optional = true }
tokio = { version = "1, >=1.23.1", features = ["fs"] }
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", features = ["bytes"], optional = true }
async_chunked_transfer = "1.4"
percent-encoding = { version = "2", optional = true }
memchr = "2"
url-crawl = { path = "../url-crawl", optional = true }
small-acme = { version = ">= 0.1.2, < 0.2", optional = true }
x509-parser = { version = "0.15.0", optional = true }
rustls = { version = "0.21.0", optional = true, default-features = false }
# serialize credentials
ron = { version = "0.8.0", optional = true }
rcgen = { version = "0.11.0", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
rand = { version = "0.8.5", optional = true }
dashmap = { version = "5.4.0", optional = true }

[features]
default = ["php", "templates", "push", "view-counter"]
connection = ["tokio/net", "tokio/io-util"]
php = ["kvarn-fastcgi-client", "connection", "percent-encoding"]
templates = []
push = ["url-crawl"]
reverse-proxy = ["connection", "url-crawl"]
# Automatic HTTPS certificates
certificate = ["small-acme", "x509-parser", "rustls", "rustls-pemfile", "ron", "rcgen", "kvarn/https", "rand"]
view-counter = ["dashmap"]
uring = ["kvarn/uring", "tokio-uring"]

[dev-dependencies]
tokio = { version = "1, >=1.23.1", features = ["net", "io-util", "macros"] }
kvarn_testing = { path = "../testing", version = "0.5" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
