[package]
name = "kvarn_chute"
version = "0.2.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "^0.8", default-features = false, features = ["simd"] }
notify = "^4"
