[package]
name = "kvarn_extensions"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvarn = { path = "../", default-features = false }
fastcgi-client = { version = "0.5.0", default-features = false, optional = true }

[features]
default = ["php", "templates"]
php = ["fastcgi-client"]
templates = []
