[package]
name = "kvarn_extensions"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvarn = { path = "../", default-features = false }
fastcgi-client = { version = "0.6",  optional = true }
url_crawl = { path = "../url_crawl", optional = true }

[features]
default = ["php", "templates", "push"]
php = ["fastcgi-client"]
templates = []
push = ["url_crawl"]
