[package]
name = "kvarn_extensions"
version = "0.2.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvarn = { path = "../", default-features = false }
fastcgi-client = { git = "https://github.com/Iselk/fastcgi-client-rs", optional = true }
tokio = { version = "^1", optional = true, features = ["net", "io-util"] }
url_crawl = { path = "../url_crawl", optional = true }

[features]
default = ["php", "templates", "push"]
php = ["fastcgi-client", "tokio"]
templates = []
push = ["url_crawl"]
