[package]
name = "kvarn_signal"
version = "0.2.1"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.64"
description = "Easy-to-use IPC signaling library, mainly used for kvarnctl"
readme = "README.md"
homepage = "https://kvarn.org/ctl/"
repository = "https://github.com/Icelk/kvarn/"
license = "Apache-2.0"
keywords = ["ipc", "kvarn"]

[dependencies]
log = "0.4"
tokio = { version = "1.24", features = ["net", "time", "io-util", "rt", "fs", "sync", "macros"] }
# tokio-uring = { git = "https://github.com/Icelk/tokio-uring", branch = "recvmsg-msg_control", optional = true }
tokio-uring = { version = "0.4.0-alpha1", package = "kvarn-tokio-uring", optional = true }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

[features]
uring = ["tokio-uring"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
