[package]
name = "kvarn_testing"
version = "0.5.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "Testing framework used by the Kvarn web server."
readme = "README.md"
homepage = "https://kvarn.org/"
repository = "https://github.com/Icelk/kvarn/"
license = "Apache-2.0"
categories = ["web-programming", "development-tools::testing"]

[dependencies]
kvarn = { path = "../", features = ["full"], version = "0.5.0" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-manual-roots"] }
rand = "0.8"
rcgen = "0.11"
tokio = { version = "1, >=1.23.1", features = ["macros"] }
rustls = "0.21"
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
log = "0.4.19"
