[package]
name = "url-crawl"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "URL crawler for HTML code."
readme = "README.md"
homepage = "https://kvarn.org/"
repository = "https://github.com/Icelk/kvarn/"
license = "Apache-2.0"
categories = ["web-programming", "parsing"]

[dependencies]
scraper = { version = "0.14", default-features = false }

[[example]]
name = "icelk"
path = "examples/icelk.dev.rs"
