[package]
name = "kvarn_utils"
version = "0.6.1"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.87"
description = "HTTP and Rust utilities used in the Kvarn web server."
readme = "README.md"
homepage = "https://kvarn.org/"
repository = "https://github.com/Icelk/kvarn/"
license = "Apache-2.0"
keywords = ["web-server", "utilities"]
categories = ["web-programming", "parsing"]

[dependencies]
log = "0.4"
bytes = "1"
http = "1.0"
percent-encoding = "2.3"
compact_str = "0.9"
